// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineNode > Snapshot Tests > should match snapshot for answer node 1`] = `
<div
  aria-label="answer node"
  class="w-6 h-6 border-2 rounded-full bg-amber-50 dark:bg-amber-900/20 border-amber-500 text-amber-600 dark:text-amber-400 flex items-center justify-center shrink-0"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot for error node 1`] = `
<div
  aria-label="error node"
  class="w-6 h-6 border-2 rounded-full bg-red-100 dark:bg-red-900/30 border-red-500 text-red-600 dark:text-red-400 flex items-center justify-center shrink-0"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot for thinking node 1`] = `
<div
  aria-label="thinking node"
  class="w-6 h-6 border-2 rounded-full bg-purple-100 dark:bg-purple-900/40 border-purple-500 text-purple-600 dark:text-purple-400 flex items-center justify-center shrink-0"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M13 10V3L4 14h7v7l9-11h-7z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot for tool node 1`] = `
<div
  aria-label="tool node"
  class="w-6 h-6 border-2 rounded-full bg-card border-border group-hover:border-purple-400/50 transition-colors flex items-center justify-center shrink-0"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot for user node 1`] = `
<div
  aria-label="user node"
  class="w-6 h-6 border-2 rounded-full bg-blue-100 dark:bg-blue-900/40 border-blue-500 text-blue-600 dark:text-blue-400 flex items-center justify-center shrink-0"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot with custom className 1`] = `
<div
  aria-label="user node"
  class="w-6 h-6 border-2 rounded-full bg-blue-100 dark:bg-blue-900/40 border-blue-500 text-blue-600 dark:text-blue-400 flex items-center justify-center shrink-0 custom-class"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot with custom icon 1`] = `
<div
  aria-label="user node"
  class="w-6 h-6 border-2 rounded-full bg-blue-100 dark:bg-blue-900/40 border-blue-500 text-blue-600 dark:text-blue-400 flex items-center justify-center shrink-0"
>
  <svg
    class="w-4 h-4"
    data-testid="custom-icon"
    fill="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2L2 7l10 5 10-5-10-5z"
    />
  </svg>
</div>
`;

exports[`TimelineNode > Snapshot Tests > should match snapshot with onClick handler 1`] = `
<div
  aria-label="user node"
  class="w-6 h-6 border-2 rounded-full bg-blue-100 dark:bg-blue-900/40 border-blue-500 text-blue-600 dark:text-blue-400 flex items-center justify-center shrink-0 cursor-pointer hover:scale-110 transition-transform"
>
  <svg
    class="w-3.5 h-3.5"
    fill="none"
    stroke="currentColor"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
